# FastBEV-ROS-TensorRT

./: CMakeLists.txt  README.md  package.xml  run.md
configs/: valid_c_idx.tensor
docker/: readme.md
example-data/: anchors.tensor
include_ros/: fastbev_plugin.hpp  fastbev_ros.hpp
launch/: fastbev_node.launch  fastbev_node.py
models/: run.md
scripts/: vis_boxes.py
src/: 01test.cpp  cv2stb.cpp  main.cpp  stb2cv.cpp
src/common/: check.hpp  dtype.hpp  launch.cuh  tensor.cu  tensor.hpp  tensorrt.cpp  tensorrt.hpp  timer.hpp  visualize.cu  visualize.hpp
src/fastbev/: fastbev.cpp  fastbev.hpp  fastbev_post.cpp  fastbev_post.hpp  fastbev_pre.cpp  fastbev_pre.hpp  normalization.hpp  postprecess.cpp  postprecess.hpp  vtransform.cu  vtransform.hpp
src_ros/: demo.cpp  fastbev_plugin.cpp  fastbev_ros.cpp  fastbev_ros_node.cpp
tool/: build_trt_engine.sh  build_trt_engine_src.sh  draw.py  environment.sh
